--- a/src/main/resources/templates/projectDetails.html
+++ b/src/main/resources/templates/projectDetails.html
@@ -294,10 +294,14 @@
                           </div>
                       </div>
                       <div class="form-group">
-                          <label for="fee" class="col-sm-3 control-label">Preis</label>
-                          <div class="col-sm-9">
+                          <label for="add-event-fees" class="col-sm-3 control-label">Preis</label>
+                          <div class="col-sm-9" id="add-event-fees">
+                              <div class="input-group margin-btm">
+                                  <input type="number" step="0.1" class="form-control" name="internalFee" id="internalFee" placeholder="NAJU-Mitglieder" th:field="*{internalParticipationFee}" />
+                                  <span class="input-group-addon"><span class="glyphicon glyphicon-eur"></span></span>
+                              </div>
                               <div class="input-group">
-                                  <input type="number" step="0.1" class="form-control" name="fee" id="fee" placeholder="Kosten" th:field="*{participationFee}" />
+                                  <input type="number" step="0.1" class="form-control" name="externalFee" id="externalFee" placeholder="nicht-Mitglieder" th:field="*{externalParticipationFee}" />
                                   <span class="input-group-addon"><span class="glyphicon glyphicon-eur"></span></span>
                               </div>
                           </div>
