--- a/src/main/resources/templates/personDetails.html
+++ b/src/main/resources/templates/personDetails.html
@@ -101,6 +101,12 @@
                           </div>
                       </div>
                       <div class="form-group">
+                          <label for="phone" class="col-sm-3 control-label">Telefon</label>
+                          <div class="col-sm-9">
+                              <input type="text" id="phone" class="form-control" name="phone" placeholder="Telefonnummer" th:field="*{phoneNumber}" />
+                          </div>
+                      </div>
+                      <div class="form-group">
                           <label for="edit-gender" class="col-sm-3 control-label">Geschlecht</label>
                           <div class="col-sm-9">
                               <fieldset id="edit-gender">
@@ -361,6 +367,12 @@
                                     <th class="col-sm-4"><span class="glyphicon glyphicon-envelope"></span> E-Mail Adresse:</th>
                                     <td class="col-sm-8">
                                         <a href="mailto:max_muster@aol.com" th:href="'mailto:' + ${person.email}" th:text="${person.email}">max_muster@aol.com</a>
+                                    </td>
+                                </tr>
+                                <tr class="row">
+                                    <th class="col-sm-4"><span class="glyphicon glyphicon-phone"></span> Telefonnummer:</th>
+                                    <td class="col-sm-8" th:text="${person.phoneNumber}">
+                                        01234 56789123
                                     </td>
                                 </tr>
                                 <tr class="row">
