--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -139,6 +139,12 @@
                                 </div>
                             </div>
                             <div class="form-group">
+                                <label for="phone" class="col-sm-3 control-label">Telefon</label>
+                                <div class="col-sm-9">
+                                    <input type="text" id="phone" class="form-control" name="phone" placeholder="Telefonnummer" th:field="*{phoneNumber}" />
+                                </div>
+                            </div>
+                            <div class="form-group">
                                 <label for="gender" class="col-sm-3 control-label">Geschlecht</label>
                                 <div class="col-sm-9">
                                     <fieldset id="gender">
