Bugfix: feePayed checkbox corresponds to model field now
Due to the introduction of an internal and external participation
fee this input was wrongly renamed as well, which made it out-of-
sync with the model.

--- a/src/main/resources/templates/eventDetails.html
+++ b/src/main/resources/templates/eventDetails.html
@@ -390,7 +390,7 @@
                           <div class="col-sm-9">
                               <div class="checkbox">
                                   <label>
-                                      <input id="edit-participant-internalFee-payed" type="checkbox" name="internalFee-payed" />Teilnahmebetrag bezahlt
+                                      <input id="edit-participant-fee-payed" type="checkbox" name="fee-payed" />Teilnahmebetrag bezahlt
                                   </label>
                               </div>
                           </div>
